css/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: rgb(196, 124, 0);
  color: rgb(38, 17, 4);
  width: auto;
}

#header {
  position: fixed;
  top: 0;
  left:0;
  display: flex;
  flex-direction: row;
  width: 100vw;
  height: 15%;
  color: white;
  justify-content: center;
  align-items:  center;
  background-color: rgb(44, 28, 1);
}

#nav-logo {
  display: flex;
  align-items: center;
  padding-left: 1rem;
  font-size: 4rem;
}

#header-img {
  height: 4rem;
  object-fit: cover;
}

#nav-bar {
  display: flex;
  float: inline-end;
  width: 40%;
  justify-content: space-evenly;
  margin-left: auto;
}

.nav-link{
  color: inherit;
  text-decoration: none;
  font-size: 2rem;
}
.nav-link:hover{
  color: inherit;
  text-decoration: underline;
}

#main-section {
  display: flex;
  flex-direction: column;
  overflow-y:scroll;
  align-items: center;
}

section{
  width: 60%;
}

li{
  list-style-type:lower-greek;
  padding: 1rem 0;
}

.video{
  display: flex;
  justify-content: center;
}

#pricing{
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  align-items: center;
  justify-content: center;
  margin: 3rem auto;
  gap: 3rem;
}

#pricing ul li{
  list-style-type: none;
}

.price-option{
  display: flex;
  flex-direction: column;
  padding: 10px;
  align-items: center;
  justify-content: center;
  background-color: beige;
  border-radius: 5%;
}

.price{
  font-size: 2rem;
  font-weight: bold;
  text-align: center;
}

.price-select{
  margin-left: auto;
  margin-right: auto;
}

.form-block *{
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

textarea{
  min-width: 50vw;
  max-width: 50vw;
  resize: none;
  min-height: 40vh;
  height: auto;
}

#submit{
  font-size: 1.5rem;
  margin: 1.5rem auto;
}

@media (min-width: 600px) and (orientation:portrait) {}

